WIP might have gotten streaming gather working.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180810 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180810 Trench segmentation.ipynb
@@ -113,7 +113,8 @@
    "source": [
     "%store -r trench_points\n",
     "%store -r trench_diag\n",
-    "%store -r trench_bboxes"
+    "%store -r trench_bboxes\n",
+    "trench_bboxes_t0 = util.get_one(trench_bboxes.groupby(\"t\"))[1]"
    ]
   },
   {
@@ -134,7 +135,7 @@
     "    walltime=\"03:00:00\",\n",
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
-    "    job_extra=[\"--exclude=compute-e-16-181,compute-e-16-186\"],\n",
+    "    # job_extra=['--exclude=compute-e-16-181,compute-e-16-186'],\n",
     "    # interface='ib0',\n",
     "    memory=\"3GB\",\n",
     "    local_directory=\"/tmp\",\n",
@@ -143,7 +144,7 @@
     "    # diagnostics_port=('127.0.0.1', 8787),\n",
     "    env_extra=['export PYTHONPATH=\"/home/jqs1/projects/matriarch\"'],\n",
     ")\n",
-    "client = Client(cluster)"
+    "client = Client(cluster)  # , direct_to_workers=True)"
    ]
   },
   {
@@ -154,6 +155,15 @@
    "source": [
     "# cluster = LocalCluster(n_workers=1)\n",
     "# client = Client(cluster)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster.scale(1)"
    ]
   },
   {
@@ -670,7 +680,7 @@
    "outputs": [],
    "source": [
     "# frames_to_analyze = all_frames.loc[IDX[:,:1,['MCHERRY','YFP'],1:5],:]\n",
-    "frames_to_analyze = all_frames.loc[IDX[:, :100, [\"MCHERRY\", \"YFP\"], :], :]"
+    "frames_to_analyze = all_frames.loc[IDX[:, :1, [\"MCHERRY\", \"YFP\"], 1:5], :]"
    ]
   },
   {
@@ -711,6 +721,9 @@
     "    regionprops=False,\n",
     "    segment_func=trench_segmentation.watershed.segment_trench,\n",
     ")\n",
+    "analyze_trench_func = compose(\n",
+    "    list, partial(map, pa.RecordBatch.from_pandas), analyze_trench_func\n",
+    ")\n",
     "\n",
     "analyze_trench_func = partial(client.submit, analyze_trench_func)\n",
     "\n",
@@ -719,6 +732,34 @@
     ")\n",
     "\n",
     "# display(trenchwise_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster = LocalCluster(n_workers=1, processes=True)\n",
+    "client = Client(cluster)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.cancel(analysis_futures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "progress(analysis_futures)"
    ]
   },
   {
@@ -746,6 +787,643 @@
    "outputs": [],
    "source": [
     "client.cancel(analysis_futures)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## New new collect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asyncio.get_event_loop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asyncio.get_event_loop().set_debug(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "\n",
+    "logging.basicConfig(level=logging.DEBUG)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.gather?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Client?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tornado.ioloop import IOLoop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IOLoop.current()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asyncio.get_event_loop_policy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asyncio.get_event_loop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aclient = Client(cluster, asynchronous=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distributed.default_client?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tornado import gen\n",
+    "from distributed.client import default_client\n",
+    "\n",
+    "\n",
+    "@streamz.Stream.register_api()\n",
+    "class gather_and_cancel(streamz.Stream):\n",
+    "    def __init__(self, upstream, stream_name=None, client=None, cancel=True, loop=None):\n",
+    "        if client is None:\n",
+    "            client = default_client()\n",
+    "        if loop is None:\n",
+    "            loop = client.loop\n",
+    "        self.client = client\n",
+    "        self.cancel = cancel\n",
+    "        streamz.Stream.__init__(self, upstream, stream_name=stream_name, loop=loop)\n",
+    "\n",
+    "    @gen.coroutine\n",
+    "    def update(self, x, who=None):\n",
+    "        result = yield self.client.gather(x, asynchronous=True)\n",
+    "        if self.cancel:\n",
+    "            self.client.cancel(x)\n",
+    "        result2 = yield self._emit(result)\n",
+    "        raise gen.Return(result2)\n",
+    "\n",
+    "\n",
+    "def sink_to_arrow(batches, sinks, writers):\n",
+    "    for i, batch in enumerate(batches):\n",
+    "        if i not in writers:\n",
+    "            sinks[i] = pa.BufferOutputStream()\n",
+    "            writers[i] = pa.RecordBatchStreamWriter(sinks[i], batch.schema)\n",
+    "        writers[i].write_batch(batch)\n",
+    "\n",
+    "\n",
+    "source = streamz.Stream(asynchronous=True, loop=client.loop)\n",
+    "\n",
+    "stream_sinks = {}\n",
+    "stream_writers = {}\n",
+    "\n",
+    "# source.rate_limit(0.0004).timed_window(1).map(partial(gather_and_cancel, cancel=True)).flatten().sink(partial(sink_to_arrow, sinks=stream_sinks, writers=stream_writers))\n",
+    "# source.rate_limit(0.0004).timed_window(1).gather_and_cancel(client=client, cancel=False).flatten().sink(partial(sink_to_arrow, sinks=stream_sinks, writers=stream_writers))\n",
+    "res = (\n",
+    "    source.buffer(10).gather_and_cancel(cancel=False, client=client).sink_to_list()\n",
+    ")  # .sink(lambda x: print(np.random.randint(10), x))\n",
+    "\n",
+    "# t = asyncio.get_event_loop().create_task(gather_stream(source, analysis_futures))\n",
+    "# client.loop.create_task(gather_stream(source, analysis_futures))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def f():\n",
+    "    await source.emit(analysis_futures[0])\n",
+    "\n",
+    "\n",
+    "client.sync(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def gather_stream(source, futures, loop=None):\n",
+    "    ac = distributed.as_completed(futures, with_results=False, loop=loop)\n",
+    "    async for future in ac:\n",
+    "        print(np.random.randint(5), future)\n",
+    "        await source.emit(future)\n",
+    "\n",
+    "\n",
+    "task = gather_stream(source, analysis_futures, loop=None)\n",
+    "t = client.loop.asyncio_loop.create_task(task)\n",
+    "# t = asyncio.get_event_loop().create_task(task)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.loop.asyncio_loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.cancel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.cancel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def g(source, futures, loop):\n",
+    "    ac = distributed.as_completed(futures, with_results=False, loop=loop)\n",
+    "    async for future in ac:\n",
+    "        await source.emit(0)\n",
+    "\n",
+    "\n",
+    "test_stream = streamz.Stream(asynchronous=True)\n",
+    "r = test_stream.sink_to_list()\n",
+    "# t = client.loop.asyncio_loop.create_task(g(test_stream, analysis_futures, client.loop))\n",
+    "client.loop.asyncio_loop.run_until_complete(\n",
+    "    g(test_stream, analysis_futures, client.loop)\n",
+    ")\n",
+    "# client.sync(g, test_stream, analysis_futures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.cancel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.loop.asyncio_loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = client.loop.asyncio_loop.create_task(gather_stream(source, analysis_futures))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l.asyncio_loop.create_task(gather_stream(source, analysis_futures))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IOLoop.asyn(gather_stream(source, analysis_futures))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.cancel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IOLoop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = IOLoop.current()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l.current()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.loop.ensure_future"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.cancel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.cancel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.cancel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.cancel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analysis_futures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.cancel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "isinstance(AssertionError(), Exception)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tornado import gen\n",
+    "from distributed.client import default_client\n",
+    "\n",
+    "\n",
+    "@streamz.Stream.register_api()\n",
+    "class gather_and_cancel(streamz.Stream):\n",
+    "    def __init__(self, upstream, stream_name=None, client=None, cancel=True):\n",
+    "        if client is None:\n",
+    "            client = default_client()\n",
+    "        self.client = client\n",
+    "        self.cancel = cancel\n",
+    "        streamz.Stream.__init__(self, upstream, stream_name=stream_name)\n",
+    "\n",
+    "    @gen.coroutine\n",
+    "    def update(self, x, who=None):\n",
+    "        try:\n",
+    "            result = yield self.client.gather(x, asynchronous=True)\n",
+    "        except Exception as exc:\n",
+    "            result = exc\n",
+    "        if self.cancel:\n",
+    "            self.client.cancel(x)\n",
+    "        result2 = yield self._emit(result)\n",
+    "        raise gen.Return(result2)\n",
+    "\n",
+    "\n",
+    "source = streamz.Stream(asynchronous=True)\n",
+    "\n",
+    "stream_sinks = {}\n",
+    "stream_writers = {}\n",
+    "\n",
+    "source2 = source.rate_limit(0.001).timed_window(0.1)\n",
+    "source3 = streamz.buffer(source2, 100).gather_and_cancel(client=client, cancel=True)\n",
+    "source3.filter(lambda x: not isinstance(x, Exception)).sink(\n",
+    "    partial(sink_to_arrow, sinks=stream_sinks, writers=stream_writers)\n",
+    ")\n",
+    "exceptions = source3.filter(lambda x: isinstance(x, Exception)).sink_to_list()\n",
+    "t = asyncio.get_event_loop().create_task(source.emit(analysis_futures[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.cancel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "pa.open_stream(stream_sinks[2].getvalue()).read_pandas()"
    ]
   },
   {
@@ -780,26 +1458,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "for x in distributed.as_completed(analysis_futures, with_results=False):\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%lprun -m distributed.core [0 for x in distributed.as_completed(analysis_futures, with_results=False)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "async def gather_stream(source, futures):\n",
     "    ac = distributed.as_completed(futures, with_results=False)\n",
     "    async for future in ac:\n",
@@ -814,16 +1472,15 @@
     "    return results\n",
     "\n",
     "\n",
-    "async def gather_and_cancel_async(futures, cancel=True):\n",
-    "    results = await client.gather(futures, asynchronous=True)\n",
-    "    if cancel:\n",
-    "        asyncio.ensure_future(client.cancel(futures, asynchronous=True))\n",
-    "    return results\n",
+    "# async def gather_and_cancel_async(futures, cancel=True):\n",
+    "#     results = await client.gather(futures, asynchronous=True)\n",
+    "#     if cancel:\n",
+    "#         asyncio.ensure_future(client.cancel(futures, asynchronous=True))\n",
+    "#     return results\n",
     "\n",
-    "\n",
-    "async def gather_cancel_map(futures, func, cancel=True):\n",
-    "    results = await gather_and_cancel_async(futures, cancel=cancel)\n",
-    "    func(results)\n",
+    "# async def gather_cancel_map(futures, func, cancel=True):\n",
+    "#     results = await gather_and_cancel_async(futures, cancel=cancel)\n",
+    "#     func(results)\n",
     "\n",
     "\n",
     "def pandas_to_arrow(dfs, sinks, writers):\n",
@@ -914,7 +1571,7 @@
     "        \"/n/scratch2/jqs1/fidelity/all/output/analysis100_stream_{}.arrow\".format(i),\n",
     "        \"w\",\n",
     "    )\n",
-    "    out.write(sink.get_result())\n",
+    "    out.write(sink.getvalue())\n",
     "    out.close()"
    ]
   },
@@ -925,7 +1582,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "pa.open_stream(stream_sinks[2].get_result()).read_pandas()"
+    "pa.open_stream(stream_sinks[2].getvalue()).read_pandas()"
    ]
   },
   {
