WIP streaming gather seems to work!!!

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180810 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180810 Trench segmentation.ipynb
@@ -931,7 +931,9 @@
     "    def update(self, x, who=None):\n",
     "        result = yield self.client.gather(x, asynchronous=True)\n",
     "        if self.cancel:\n",
-    "            self.client.cancel(x)\n",
+    "            print(\"cancelling\", x)\n",
+    "            yield self.client.cancel(x, asynchronous=True)\n",
+    "            print(\"canceled\", x)\n",
     "        result2 = yield self._emit(result)\n",
     "        raise gen.Return(result2)\n",
     "\n",
@@ -952,11 +954,55 @@
     "# source.rate_limit(0.0004).timed_window(1).map(partial(gather_and_cancel, cancel=True)).flatten().sink(partial(sink_to_arrow, sinks=stream_sinks, writers=stream_writers))\n",
     "# source.rate_limit(0.0004).timed_window(1).gather_and_cancel(client=client, cancel=False).flatten().sink(partial(sink_to_arrow, sinks=stream_sinks, writers=stream_writers))\n",
     "res = (\n",
-    "    source.buffer(10).gather_and_cancel(cancel=False, client=client).sink_to_list()\n",
+    "    source.buffer(100).gather_and_cancel(cancel=True, client=client).sink_to_list()\n",
     ")  # .sink(lambda x: print(np.random.randint(10), x))\n",
     "\n",
-    "# t = asyncio.get_event_loop().create_task(gather_stream(source, analysis_futures))\n",
-    "# client.loop.create_task(gather_stream(source, analysis_futures))"
+    "\n",
+    "async def gather_stream(source, futures, loop=None):\n",
+    "    ac = distributed.as_completed(futures, with_results=False, loop=loop)\n",
+    "    async for future in ac:\n",
+    "        print(np.random.randint(5), future)\n",
+    "        await source.emit(future)\n",
+    "\n",
+    "\n",
+    "task = gather_stream(source, analysis_futures, loop=None)\n",
+    "t = client.loop.asyncio_loop.create_task(task)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.cancel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analysis_futures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t.cancel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(res)"
    ]
   },
   {
@@ -979,24 +1025,6 @@
    "outputs": [],
    "source": [
     "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "async def gather_stream(source, futures, loop=None):\n",
-    "    ac = distributed.as_completed(futures, with_results=False, loop=loop)\n",
-    "    async for future in ac:\n",
-    "        print(np.random.randint(5), future)\n",
-    "        await source.emit(future)\n",
-    "\n",
-    "\n",
-    "task = gather_stream(source, analysis_futures, loop=None)\n",
-    "t = client.loop.asyncio_loop.create_task(task)\n",
-    "# t = asyncio.get_event_loop().create_task(task)"
    ]
   },
   {
