Streaming gather with submit backpressure seems to work.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180810 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180810 Trench segmentation.ipynb
@@ -136,12 +136,12 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"00:15:00\",\n",
+    "    walltime=\"12:00:00\",\n",
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # job_extra=['--exclude=compute-e-16-181,compute-e-16-186'],\n",
     "    # interface='ib0',\n",
-    "    memory=\"1.5GB\",\n",
+    "    memory=\"3GB\",\n",
     "    local_directory=\"/tmp\",\n",
     "    cores=4,\n",
     "    processes=1,\n",
@@ -740,9 +740,9 @@
     "\n",
     "analyze_trench_func = partial(client.submit, analyze_trench_func, retries=2)\n",
     "\n",
-    "analysis_futures = workflow.analyze_frames_and_trenches(\n",
-    "    selected_trenches_segmentation, frames_to_analyze, analyze_trench_func\n",
-    ")\n",
+    "# analysis_futures = workflow.analyze_frames_and_trenches(selected_trenches_segmentation,\n",
+    "#                                            frames_to_analyze,\n",
+    "#                                            analyze_trench_func)\n",
     "\n",
     "# display(trenchwise_df)"
    ]
@@ -760,6 +760,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client = Client(cluster)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
     "from tornado import gen\n",
     "from distributed.client import default_client\n",
     "\n",
@@ -799,6 +809,17 @@
     "stream_sinks = {}\n",
     "stream_writers = {}\n",
     "\n",
+    "analysis_futures_iter = workflow.analyze_frames_and_trenches_iter(\n",
+    "    selected_trenches_segmentation, frames_to_analyze, analyze_trench_func\n",
+    ")\n",
+    "\n",
+    "ac = distributed.as_completed([], with_results=False, loop=client.loop)\n",
+    "\n",
+    "# async def submit_stream(futures, as_completed, backpressure_source):\n",
+    "#     for future in futures:\n",
+    "#         as_completed.add(future)\n",
+    "#         await backpressure_source\n",
+    "\n",
     "source2 = source.rate_limit(0.0004).timed_window(1)\n",
     "source3 = streamz.buffer(source2, 10).gather_and_cancel(client=client, cancel=True)\n",
     "source3.flatten().sink(\n",
@@ -807,23 +828,29 @@
     "        sinks=stream_sinks,\n",
     "        writers=stream_writers,\n",
     "        output_func=lambda i: pa.OSFile(\n",
-    "            \"/n/scratch2/jqs1/fidelity/all/output/analysis_all_stream_{}.arrow\".format(\n",
+    "            \"/n/scratch2/jqs1/fidelity/all/output/analysis_full_stream_{}.arrow\".format(\n",
     "                i\n",
     "            ),\n",
-    "            \"w\",\n",
+    "            \"r+w\",\n",
     "        ),\n",
     "    )\n",
     ")\n",
     "\n",
     "\n",
-    "async def gather_stream(source, futures, loop=None):\n",
-    "    ac = distributed.as_completed(futures, with_results=False, loop=loop)\n",
-    "    async for future in ac:\n",
+    "async def gather_stream(source, as_completed, loop=None):\n",
+    "    async for future in as_completed:\n",
     "        await source.emit(future)\n",
     "\n",
     "\n",
-    "task = gather_stream(source, analysis_futures, loop=None)\n",
-    "t = client.loop.asyncio_loop.create_task(task)"
+    "source.sink(excepts(StopIteration, lambda x: ac.add(next(analysis_futures_iter))))\n",
+    "\n",
+    "# submit_func = submit_stream(analysis_futures_iter, ac, source)\n",
+    "# submit_task = client.loop.asyncio_loop.create_task(submit_func)\n",
+    "\n",
+    "ac.update(take(3000, analysis_futures_iter))\n",
+    "\n",
+    "gather_func = gather_stream(source, ac, loop=None)\n",
+    "gather_task = client.loop.asyncio_loop.create_task(gather_func)"
    ]
   },
   {
@@ -832,7 +859,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t"
+    "gather_task.cancel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gather_task"
    ]
   },
   {
