Restructured streaming that sinks to lists of all futures and erred futures, only gathers successfully finished futures.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
@@ -42,6 +42,8 @@ github issue for streamz:
     map async funcs
     gather to await them (as_completed)
 
+github issue for streamz: buffer to _buffer
+
 report as_completed+stream on https://github.com/dask/distributed/issues/2157
 
 allow for multiple mask preprocessing functions
