--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180811 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180811 Trench segmentation.ipynb
@@ -136,7 +136,7 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"00:15:00\",\n",
+    "    walltime=\"09:00:00\",\n",
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # job_extra=['--exclude=compute-e-16-181,compute-e-16-186'],\n",
@@ -168,15 +168,6 @@
    "outputs": [],
    "source": [
     "cluster.adapt(minimum=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cluster.scale(1)"
    ]
   },
   {
@@ -761,86 +752,51 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "from tornado import gen\n",
-    "from distributed.client import default_client\n",
-    "\n",
-    "\n",
-    "@streamz.Stream.register_api()\n",
-    "class gather_and_cancel(streamz.Stream):\n",
-    "    def __init__(self, upstream, stream_name=None, client=None, cancel=True, loop=None):\n",
-    "        if client is None:\n",
-    "            client = default_client()\n",
-    "        if loop is None:\n",
-    "            loop = client.loop\n",
-    "        self.client = client\n",
-    "        self.cancel = cancel\n",
-    "        streamz.Stream.__init__(self, upstream, stream_name=stream_name, loop=loop)\n",
-    "\n",
-    "    @gen.coroutine\n",
-    "    def update(self, x, who=None):\n",
-    "        result = yield self.client.gather(x, asynchronous=True)\n",
-    "        if self.cancel:\n",
-    "            yield self.client.cancel(x, asynchronous=True)\n",
-    "        result2 = yield self._emit(result)\n",
-    "        raise gen.Return(result2)\n",
-    "\n",
-    "\n",
-    "def sink_to_arrow(batches, sinks, writers, output_func=None):\n",
-    "    if output_func is None:\n",
-    "        output_func = lambda i: pa.BufferOutputStream()\n",
-    "    for i, batch in enumerate(batches):\n",
-    "        if i not in writers:\n",
-    "            sinks[i] = output_func(i)\n",
-    "            writers[i] = pa.RecordBatchStreamWriter(sinks[i], batch.schema)\n",
-    "        writers[i].write_batch(batch)\n",
-    "\n",
-    "\n",
-    "source = streamz.Stream(asynchronous=True, loop=client.loop)\n",
-    "\n",
-    "stream_sinks = {}\n",
-    "stream_writers = {}\n",
-    "\n",
     "analysis_futures_iter = workflow.analyze_frames_and_trenches_iter(\n",
     "    selected_trenches_segmentation, frames_to_analyze, analyze_trench_func\n",
     ")\n",
     "\n",
     "ac = distributed.as_completed([], with_results=False, loop=client.loop)\n",
     "\n",
-    "# async def submit_stream(futures, as_completed, backpressure_source):\n",
-    "#     for future in futures:\n",
-    "#         as_completed.add(future)\n",
-    "#         await backpressure_source\n",
+    "new_futures_stream = streamz.Stream()\n",
+    "finished_futures_stream = streamz.Stream(asynchronous=True, loop=client.loop)\n",
     "\n",
-    "source2 = source.rate_limit(0.0004).timed_window(1)\n",
-    "source3 = streamz.buffer(source2, 10).gather_and_cancel(client=client, cancel=True)\n",
-    "source3.flatten().sink(\n",
+    "stream_sinks = {}\n",
+    "stream_writers = {}\n",
+    "output_filename = \"/n/scratch2/jqs1/fidelity/all/output/analysis_full_stream3_{}.arrow\"\n",
+    "\n",
+    "new_futures_stream.sink(lambda x: ac.add(x))\n",
+    "\n",
+    "errored_futures = finished_futures_stream.filter(\n",
+    "    lambda x: x.status == \"error\"\n",
+    ").sink_to_list()\n",
+    "\n",
+    "successful_futures = finished_futures_stream.filter(lambda x: x.status == \"finished\")\n",
+    "batched_futures = successful_futures.rate_limit(0.0004).timed_window(1)\n",
+    "gathered_futures = streamz.buffer(batched_futures, 10).gather_and_cancel(\n",
+    "    client=client, cancel=True\n",
+    ")\n",
+    "gathered_futures.flatten().sink(\n",
     "    partial(\n",
-    "        sink_to_arrow,\n",
+    "        workflow.sink_to_arrow,\n",
     "        sinks=stream_sinks,\n",
     "        writers=stream_writers,\n",
-    "        output_func=lambda i: pa.OSFile(\n",
-    "            \"/n/scratch2/jqs1/fidelity/all/output/analysis_full_stream_{}.arrow\".format(\n",
-    "                i\n",
-    "            ),\n",
-    "            \"w\",\n",
-    "        ),\n",
+    "        output_func=lambda i: pa.OSFile(output_filename.format(i), \"w\"),\n",
     "    )\n",
     ")\n",
     "\n",
+    "finished_futures_stream.sink(\n",
+    "    excepts(\n",
+    "        StopIteration, lambda x: new_futures_stream.emit(next(analysis_futures_iter))\n",
+    "    )\n",
+    ")\n",
+    "all_futures = new_futures_stream.sink_to_list()\n",
     "\n",
-    "async def gather_stream(source, as_completed, loop=None):\n",
-    "    async for future in as_completed:\n",
-    "        await source.emit(future)\n",
+    "# ac.update(take(3000, analysis_futures_iter))\n",
+    "for future in take(600, analysis_futures_iter):\n",
+    "    new_futures_stream.emit(future)\n",
     "\n",
-    "\n",
-    "source.sink(excepts(StopIteration, lambda x: ac.add(next(analysis_futures_iter))))\n",
-    "\n",
-    "# submit_func = submit_stream(analysis_futures_iter, ac, source)\n",
-    "# submit_task = client.loop.asyncio_loop.create_task(submit_func)\n",
-    "\n",
-    "ac.update(take(3000, analysis_futures_iter))\n",
-    "\n",
-    "gather_func = gather_stream(source, ac, loop=None)\n",
+    "gather_func = workflow.gather_stream(finished_futures_stream, ac)\n",
     "gather_task = client.loop.asyncio_loop.create_task(gather_func)"
    ]
   },
@@ -850,7 +806,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "len(all_futures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(errored_futures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(all_futures) / len(frames_to_analyze)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "gather_task.cancel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.cancel(all_futures)"
    ]
   },
   {
