--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180814 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180814 Trench segmentation.ipynb
@@ -136,19 +136,19 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"00:15:00\",\n",
+    "    walltime=\"05:00:00\",\n",
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # job_extra=['--exclude=compute-e-16-181,compute-e-16-186'],\n",
     "    # interface='ib0',\n",
     "    memory=\"3GB\",\n",
     "    local_directory=\"/tmp\",\n",
-    "    cores=4,\n",
+    "    cores=1,\n",
     "    processes=1,\n",
     "    # diagnostics_port=('127.0.0.1', 8787),\n",
     "    env_extra=['export PYTHONPATH=\"/home/jqs1/projects/matriarch\"'],\n",
     ")\n",
-    "client = Client(cluster)  # , direct_to_workers=True)"
+    "client = Client(cluster, direct_to_workers=True)"
    ]
   },
   {
@@ -705,6 +705,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.restart()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "labelwise_funcs = {\n",
     "    \"mean\": np.mean,\n",
@@ -763,7 +772,7 @@
     "\n",
     "stream_sinks = {}\n",
     "stream_writers = {}\n",
-    "output_filename = \"/n/scratch2/jqs1/fidelity/all/output/analysis_full_stream4_{}.arrow\"\n",
+    "output_filename = \"/n/scratch2/jqs1/fidelity/all/output/analysis_full_stream8_{}.arrow\"\n",
     "\n",
     "new_futures_stream.sink(lambda x: ac.add(x))\n",
     "\n",
@@ -771,12 +780,21 @@
     "    lambda x: x.status == \"error\"\n",
     ").sink_to_list()\n",
     "\n",
+    "\n",
+    "def timeout_func(futures):\n",
+    "    print(\"timed out, adding to as_completed...\")\n",
+    "    ac.update(futures)\n",
+    "    print(\"   ...ADDED\")\n",
+    "\n",
+    "\n",
     "successful_futures = finished_futures_stream.filter(lambda x: x.status == \"finished\")\n",
     "# batched_futures = successful_futures.rate_limit(0.0004).timed_window(1)\n",
-    "batched_futures = successful_futures.timed_window(1)\n",
     "# gathered_futures = streamz.buffer(batched_futures, 10).gather_and_cancel(client=client, cancel=True)\n",
-    "gathered_futures = streamz.buffer(batched_futures, 100).gather_and_cancel(\n",
-    "    client=client, cancel=True\n",
+    "# batched_futures = successful_futures.timed_window(1)\n",
+    "batched_futures = successful_futures.rate_limit(0.004).timed_window(1)\n",
+    "buffered_futures = streamz.buffer(batched_futures, 100)\n",
+    "gathered_futures = buffered_futures.gather_and_cancel(\n",
+    "    client=client, cancel=True, timeout=5, timeout_func=timeout_func\n",
     ")\n",
     "gathered_futures.flatten().sink(\n",
     "    partial(\n",
@@ -787,15 +805,27 @@
     "    )\n",
     ")\n",
     "\n",
-    "finished_futures_stream.sink(\n",
-    "    excepts(\n",
-    "        StopIteration, lambda x: new_futures_stream.emit(next(analysis_futures_iter))\n",
-    "    )\n",
-    ")\n",
-    "all_futures = new_futures_stream.sink_to_list()\n",
+    "# finished_futures_stream.sink(excepts(StopIteration, lambda x: new_futures_stream.emit(next(analysis_futures_iter)) if should_add_task()))\n",
+    "# new_futures_stream.sink_to_list()\n",
+    "all_futures = set()\n",
+    "new_futures_stream.sink(lambda x: all_futures.add(x))\n",
+    "\n",
+    "TASK_BUFFER_SIZE = 1000\n",
+    "\n",
+    "\n",
+    "def should_add_task():\n",
+    "    return len([f for f in all_futures if f.status == \"pending\"]) < TASK_BUFFER_SIZE\n",
+    "\n",
+    "\n",
+    "def readd_task(x):\n",
+    "    if should_add_task():\n",
+    "        return new_futures_stream.emit(next(analysis_futures_iter))\n",
+    "\n",
+    "\n",
+    "finished_futures_stream.sink(excepts(StopIteration, readd_task))\n",
     "\n",
     "# ac.update(take(3000, analysis_futures_iter))\n",
-    "for future in take(600, analysis_futures_iter):\n",
+    "for future in take(TASK_BUFFER_SIZE, analysis_futures_iter):\n",
     "    new_futures_stream.emit(future)\n",
     "\n",
     "gather_func = workflow.gather_stream(finished_futures_stream, ac)\n",
@@ -808,7 +838,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "len(cluster.running_jobs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gather_task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gathered_futures.upstream.queue._queue = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ac.update([f for f in all_futures if f.status == \"pending\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "len(all_futures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "errored_futures[0].result()"
    ]
   },
   {
@@ -835,15 +910,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gather_task.cancel()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "gather_task.cancel()\n",
     "client.cancel(all_futures)"
    ]
   },
